# quokka

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  deny.toml
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-05-26-capture-tui-plan.md
docs/superpowers/specs/: 2026-05-19-analyze-command-design.md  2026-05-19-dashboard-extras-design.md  2026-05-19-dashboard-welcome-design.md  2026-05-25-info-command-design.md  2026-05-25-logs-command-design.md  2026-05-25-media-command-design.md  2026-05-25-power-commands-design.md  2026-05-25-pull-command-design.md  2026-05-25-storage-command-design.md  2026-05-26-capture-tui-design.md  2026-05-27-qk-card-design.md
examples/: chaos_cards.rs
scripts/: release.sh
src/: lib.rs  ui.rs
src/commands/: analyze.rs  apps.rs  capture.rs  dashboard.rs  devices.rs  info.rs  logs.rs  media.rs  menu.rs  mod.rs  power.rs  status.rs  update.rs
src/commands/capture/: hosts.rs  mod.rs  tui.rs
src/commands/card/: badges.rs  data.rs  emoji.rs  mod.rs  png.rs  render.rs  share.rs
src/device/: build_version.rs  chip_names.rs  jailbreak.rs  mod.rs  model_names.rs  model_release_years.rs
tests/: .integration.rs.pending-snap  e2e_card.rs  e2e_enrich_bench.rs  e2e_smoke.rs  integration.rs
