[package]
name = "quokka-cli"
version = "0.2.2"
edition = "2021"
description = "CLI to inspect and tidy an iPhone connected over USB to a Mac."
license = "MIT"
repository = "https://github.com/dutradotdev/quokka"
homepage = "https://github.com/dutradotdev/quokka"
readme = "README.md"
keywords = ["ios", "iphone", "cli", "idevice", "usbmuxd"]
categories = ["command-line-utilities"]
# Disable bin auto-discovery so we control both `quokka` and `qk` explicitly.
autobins = false
# Distribution is via Homebrew and the curl installer (see release.yml);
# nothing here is a library people should depend on. Setting publish to
# false keeps `FakeDevice`, the `Device` trait, and `pub mod bench` from
# becoming a de-facto stable API via `cargo install quokka-cli`.
#
# `cargo-dist` interprets `publish = false` as "skip this package", which
# breaks the release pipeline. The override below tells dist to keep
# building binaries for it.
publish = false

[package.metadata.dist]
dist = true

[lib]
name = "quokka_cli"
path = "src/lib.rs"

[[bin]]
name = "quokka"
path = "src/bin/quokka.rs"

[[bin]]
name = "qk"
path = "src/bin/qk.rs"

[features]
default = []
# Enables tests that require a real iPhone connected via USB. Not run in CI.
e2e = []

[dependencies]
# Pinned with `=` — the idevice crate warns of breaking changes at every point
# release until 0.2.0. Re-run Prompt 0's research before bumping.
idevice = { version = "=0.1.61", default-features = false, features = [
    # Crypto backend for lockdown TLS. `aws-lc` is upstream's default; it
    # implies `rustls`. The other option would be `ring`.
    "aws-lc",
    "usbmuxd",
    "diagnostics_relay",
    "afc",
    "installation_proxy",
    "syslog_relay",
    "pcapd",
    "rsd",
] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
# JSON output for `--json` on `qk info` / `qk devices`. Other commands
# still print plain text; expanding coverage is a follow-up.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `FuturesUnordered` for bounded-concurrency batched lookups.
futures = "0.3"
# Used directly to type plist values returned from `idevice` (which depends
# on the same major version transitively).
plist = "1"

# UX libs — chosen once here so every command stays consistent.
# anstream auto-detects TTY and strips ANSI when piped; owo-colors composes on top.
owo-colors = { version = "4", features = ["supports-colors"] }
anstream = "0.6"
indicatif = "0.17"
# Confirm prompt after TUI selection. MultiSelect was replaced by the
# ratatui-based picker (live size updates during Phase 2 enrichment).
dialoguer = { version = "0.11", default-features = false }
# Live-updating multi-select TUI for `qk apps` — items render with static
# sizes immediately, then refresh as Phase 2 enrichment streams in.
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
# Pure-Rust packet parser (Ethernet / IPv4 / IPv6 / TCP / UDP / ICMP). No C deps.
etherparse = "0.20"
# pcap / pcapng read+write. We use the write side (`--save`) — pcapng lets us
# attach per-packet comments which is how we smuggle pid/comm into Wireshark.
pcap-file = "2.0"

# SVG → PNG pipeline for `qk card`. `usvg` parses, `resvg` rasterises onto a
# `tiny-skia` pixmap. `fontdb` is held by `usvg::Options` so we can register
# the embedded JetBrains Mono bytes before parsing (`resvg` doesn't consult
# system fonts on macOS reliably).
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
# URL-encoding for the Twitter intent URL. The std-only alternative would
# hand-roll percent-encoding; `urlencoding` is 30 lines and avoids the
# usual escape-set off-by-ones.
urlencoding = "2"
# Encoding the embedded mascot PNG as a data-URI for the card's `<image>`
# element. usvg/resvg parses `data:image/png;base64,…` natively; this lets
# us ship a single self-contained SVG with no external file references.
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
# Inline snapshots for render functions — locks in the printed layout so
# accidental column-width or row-order changes fail loudly.
insta = "1"
# Temp files for capture-writer roundtrip tests (write a packet, read it back).
tempfile = "3"

# Generate this profile section with `dist init`; it controls the release
# binary's size + speed when shipped via Homebrew / curl installer.
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "dutradotdev/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
